src/test/ui/impl-trait/in-trait/default-body-with-rpit.stderr
error[E0720]: cannot resolve opaque type
  --> $DIR/default-body-with-rpit.rs:10:28
   |
LL |     async fn baz(&self) -> impl Debug {
   |                            ^^^^^^^^^^ cannot resolve opaque type
   |
   = note: these returned values have a concrete "never" type
   = help: this error will resolve once the item's body returns a concrete type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0720`.
